--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
 }
 
 .mdl-layout__content {
-  padding-left: 30px;
+  padding-left: 20px;
   padding-top: 20px;
 }
 
@@ -28,6 +28,7 @@ body {
   clear: both;
 }
 
-img {
+.image {
   width: 300px;
+  padding-left: 40px
 }
